--- a/key_secure/pubspec.yaml
+++ b/key_secure/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  clipboard: ^0.1.3
   cupertino_icons: ^1.0.2
   get: ^4.1.4
   google_fonts: ^2.0.0
