--- a/key_secure/pubspec.yaml
+++ b/key_secure/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   animated_splash_screen: ^1.1.0
   clipboard: ^0.1.3
   cupertino_icons: ^1.0.2
+  flutter_svg: ^0.22.0
   get: ^4.1.4
   google_fonts: ^2.0.0
   http: ^0.13.1
@@ -45,7 +46,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo/logo.png
+    - assets/logo/logo1.png
     - assets/logo/logo2.png
+    - assets/svg/forgot.svg
+    - assets/svg/secure.svg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
