--- a/key_secure/pubspec.yaml
+++ b/key_secure/pubspec.yaml
@@ -28,8 +28,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   get: ^4.1.4
+  get_storage: ^2.0.2
   google_fonts: ^2.0.0
   http: ^0.13.1
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
