--- a/key_secure_v2/pubspec.yaml
+++ b/key_secure_v2/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.1.4
   get_storage: ^2.0.2
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
