--- a/key_secure_v2/pubspec.yaml
+++ b/key_secure_v2/pubspec.yaml
@@ -24,10 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
   animated_splash_screen: ^1.1.0
+  clipboard: ^0.1.3
   cupertino_icons: ^1.0.2
   get: ^4.1.4
   get_storage: ^2.0.2
   google_fonts: ^2.1.0
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
