--- a/key_secure_v2/pubspec.yaml
+++ b/key_secure_v2/pubspec.yaml
@@ -26,10 +26,12 @@ dependencies:
   animated_splash_screen: ^1.1.0
   clipboard: ^0.1.3
   cupertino_icons: ^1.0.2
+  flutter_svg: ^0.22.0
   get: ^4.1.4
   get_storage: ^2.0.2
   google_fonts: ^2.1.0
   jwt_decoder: ^2.0.1
+  page_transition: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +48,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo/
+    - assets/svg/
     - assets/images/icons/
     # - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
