--- a/key_secure_v2/pubspec.yaml
+++ b/key_secure_v2/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   get_storage: ^2.0.2
   google_fonts: ^2.1.0
   jwt_decoder: ^2.0.1
-  page_transition: ^2.0.2
+  page_transition: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +50,7 @@ flutter:
     - assets/logo/
     - assets/svg/
     - assets/images/icons/
+    - assets/images/
     # - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
