--- a/key_secure_v2/pubspec.yaml
+++ b/key_secure_v2/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_fonts: ^2.1.0
   jwt_decoder: ^2.0.1
   page_transition: ^2.0.0
+  url_launcher: ^6.0.6
 
 dev_dependencies:
   flutter_test:
