--- a/key_secure_v2/pubspec.yaml
+++ b/key_secure_v2/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   animated_splash_screen: ^1.1.0
   clipboard: ^0.1.3
   cupertino_icons: ^1.0.2
+  double_back_to_close: ^2.0.0
   flutter_svg: ^0.22.0
   get: ^4.1.4
   get_storage: ^2.0.2
