--- a/key_secure_v2/pubspec.yaml
+++ b/key_secure_v2/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   get: ^4.1.4
   get_storage: ^2.0.2
   google_fonts: ^2.1.0
+  image_picker: ^0.8.0+3
   jwt_decoder: ^2.0.1
   page_transition: ^2.0.0
   url_launcher: ^6.0.6
