--- a/key_secure_v2/pubspec.yaml
+++ b/key_secure_v2/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^0.8.0+3
   jwt_decoder: ^2.0.1
   page_transition: ^2.0.0
+  shimmer: ^2.0.0
   url_launcher: ^6.0.6
 
 dev_dependencies:
