--- a/key_secure_v2/pubspec.yaml
+++ b/key_secure_v2/pubspec.yaml
@@ -54,6 +54,7 @@ flutter:
     - assets/logo/
     - assets/images/icons/
     - assets/images/
+    - assets/svg/
     # - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
