--- a/key_secure_v2/pubspec.yaml
+++ b/key_secure_v2/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   animated_splash_screen: ^1.1.0
   clipboard: ^0.1.3
+  connectivity: ^3.0.6
   cupertino_icons: ^1.0.2
   double_back_to_close: ^2.0.0
   flutter_svg: ^0.22.0
