--- a/key_secure_v2/pubspec.yaml
+++ b/key_secure_v2/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   animated_splash_screen: ^1.1.0
+  animations: ^2.0.1
   clipboard: ^0.1.3
   connectivity: ^3.0.6
   cupertino_icons: ^1.0.2
