--- a/key_secure_v2/android/app/src/main/AndroidManifest.xml
+++ b/key_secure_v2/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.key_secure_v2">
+      <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="key_secure_v2"
+        android:label="Key Secure"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
